Fix: burger menu being too high up and blocking the exit button

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -154,6 +154,7 @@
       right: -101%;
       height: 100vh;
       width: 70%;
+      top: 4.8rem;
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
